# TimeMachineLogs

./: README.md
TimeMachineLogs/: ApplicationConstants.h  Archiver.cpp  Archiver.h  ArchiverModeHelper.h  CMakeLists.txt  FileCollector.cpp  FileCollector.h  FileEntry.cpp  FileEntry.h  FileHasher.cpp  FileHasher.h  main.cpp
